<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:src="@drawable/profile_image"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_below="@id/profile_image"
            android:layout_centerInParent="true"
            android:paddingBottom="15dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textSize="14sp">


            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/backgroud_cards">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="64dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/number_phone"
                        app:srcCompat="@drawable/phone_icon"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="69dp"
                        android:text="@string/number_phone"
                        android:textSize="18sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/backgroud_cards">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="64dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/email"
                        app:srcCompat="@drawable/email_icon"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="282dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="46dp"
                        android:text="@string/email"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_facebook_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/backgroud_cards">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/facebook_icon"
                        android:layout_width="64dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/facebook_profile"
                        app:srcCompat="@drawable/facebook_icon"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/facebook_profile"
                        android:layout_width="257dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="71dp"
                        android:text="@string/facebook_profile"
                        android:textSize="18sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/backgroud_cards">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/twitter_icon"
                        android:layout_width="64dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/twitter_profile"
                        app:srcCompat="@drawable/twitter_icon"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/twitter_profile"
                        android:layout_width="259dp"
                        android:layout_height="38dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="69dp"
                        android:paddingTop="10dp"
                        android:text="@string/twitter_profile"
                        android:textSize="18sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>